<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/txt_welcome_after_dbx_link"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_download_worlds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_download_from_dbx"
            android:onClick="downloadFromDropbox"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_desc_button_download"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <Button
            android:id="@+id/button_upload_worlds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_upload_local_worlds"
            android:onClick="uploadToDropbox"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_desc_button_upload"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"/>
    </LinearLayout>
</LinearLayout>